use 1ul for a left shift that may be greater than int sized. noticed by martin.

fixes PR#53081.